--- a/movieSeatBooking/index.html
+++ b/movieSeatBooking/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-	<div>
+	<div class="movie-container">
 		<label>Pick a Movie:</label>
 		<select id="movie">
 			<option value="10">The killer ($10)</option>
